tests/errors/circular-reference/b.wit
reference ./a.wit

@b
  - uses @a
b@
